Fix horizontal overflow on .register-section (#2255)

--- a/web/src/components/index.css
+++ b/web/src/components/index.css
@@ -41,9 +41,6 @@ body,
     width: 100%;
 }
 
-body {
-}
-
 h1,
 h2,
 h3,
